change file names

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <h2>Portfolio</h2>
             <p> Portfolio coming soon! </p>
             <a href="https://google.com">
-                <img src="images/berkeley bootcamp image.jpeg" alt="students coding" class="float-center">
+                <img src="/images/berkeley-bootcamp-image.jpeg" alt="students coding" class="float-center">
             </a>
-            <img src="images/coming soon.jpeg" alt="Coming soon dign" class="float-right">
+            <img src="/images/coming-soon.jpeg" alt="Coming soon sign" class="float-right">
             <a href="https://google.com">
-                <img src="images/coming soon.jpeg" alt="Coming soon sign" class="float-left">
+                <img src="images/coming-soon.jpeg" alt="Coming soon sign" class="float-left">
             </a>
         </section>
 
